# arts-gen

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Dockerfile  EE_EVAL_WORKFLOW.md  INTERFACE.md  LICENSE  NOTICE  README.md  code update.md  part_prompt_seg_feishu_prompt.txt  run_pipeline.sh  train0706.txt
TRELLIS-arts/: inference.py  (+7 more)
post_process/: .gitignore  README.md  pyproject.toml
post_process/kinematic_solver/: benchmark_kin_agent.py  build_axis_family_model.py  build_range_prior.py  build_static_axis_family_model.py  build_static_dino_door_axis_model.py  estimate_limit.py  run_kin_agent.py  run_kin_agent_bundle.py
post_process/kinematic_solver/docs/: README.md  agent_rules.md  axis_validation.md  benchmark_ra_phyx_expanded_v1.json  benchmark_ra_phyx_representative.json  estimate_limit_artifact.md  kin_agent_v2.md
post_process/kinematic_solver/priors/: kin_axis_family_lr_v1.joblib  kin_axis_family_lr_v1.json  kin_axis_family_lr_v2.joblib  kin_axis_family_lr_v2.json  kin_range_prior_v1.json  kin_range_prior_v2.json  kin_range_prior_v3.json
post_process/kinematic_solver/sdk/: __init__.py  agent_loop.py  axis_candidates.py  axis_family_model.py  axis_feedback.py  candidate_file.py  collision_audit.py  collision_feedback.py  compile_signals.py  compiler.py  context_builder.py  coordinate_frame.py  door_contact_axis_critic.py  kin_agent.py  kin_export.py  live_viewer.py  mjcf_preview.py  motion_observation.py  motion_search.py  motion_validation.py  object_visualization.py  range_prior.py  schemas.py  static_axis_family_model.py  static_dino_axis_model.py  static_dino_features.py  thin_axis_critic.py  vlm_initial.py
post_process/kinematic_solver/tools/: audit_no_cheat.py  audit_no_cheat.sh
post_process/kinematic_solver/utils/: __init__.py  _fcl_backend.py  backend.py  compare.py  constraints.py  errors.py  joint_evaluator.py  motion_direction_prior.py  phase0_verify.py  render.py  run_all.py  run_solver.py  run_validate.py  solver.py  usd_limit_reader.py  usd_limit_writer.py  validate.py  visualize.py  write_predicted_usd.py
post_process/object_post_process/: __init__.py  kinematic_workbench.py  mjcf_parser.py  server.py  web_editor.py  xml_saver.py
post_process/scene_reconstruction/: server.py  web_viewer.py
post_process/scripts/: start_object_post_process.sh
post_process/utils/: isaac_export_service.py  isaaclab_launcher.py  usd_exporter.py
post_process/utils/frontend/: kinematic_workbench.html  mjcf_joint_editor.html  scene_viewer.html
post_process/utils/frontend/supersplat-viewer/: index.js
post_process/utils/shared_libs/: BufferGeometryUtils.js  GLTFLoader.js  TransformControls.js
submodules/sam3d-stage/generate_mask/: README.md  pyproject.toml
submodules/sam3d-stage/generate_mask/mask/: __init__.py  cli.py  pipeline.py  session.py  types.py
submodules/sam3d-stage/generate_mask/mask.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
submodules/sam3d-stage/generate_surface_voxel/: README.md  pyproject.toml
submodules/sam3d-stage/generate_surface_voxel/surface_voxel/: __init__.py  __main__.py  cli.py  pipeline.py  types.py
submodules/sam3d-stage/generate_surface_voxel/surface_voxel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
submodules/sam3d-stage/generate_texture/: README.md  pyproject.toml
submodules/sam3d-stage/generate_texture/texture/: __init__.py  __main__.py  align.py  cli.py  pipeline.py  types.py
submodules/sam3d-stage/generate_texture/texture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
submodules/sam3d-stage/web/shared/: README.md  pyproject.toml
submodules/sam3d-stage/web/web_generate_mask/: README.md  pyproject.toml
submodules/sam3d-stage/web/web_generate_mask/backend/: server.py
submodules/sam3d-stage/web/web_generate_mask/frontend/: index.html
submodules/sam3d-stage/web/web_generate_mask/scripts/: run_server.sh
submodules/sam3d-stage/web/web_surface_voxel/: README.md  pyproject.toml
submodules/sam3d-stage/web/web_surface_voxel/backend/: server.py
submodules/sam3d-stage/web/web_surface_voxel/frontend/: index.html
submodules/sam3d-stage/web/web_surface_voxel/scripts/: run_server.sh
submodules/sam3d-stage/web/web_texture/: README.md  pyproject.toml
submodules/sam3d-stage/web/web_texture/backend/: server.py
submodules/sam3d-stage/web/web_texture/frontend/: index.html
submodules/sam3d-stage/web/web_texture/scripts/: run_server.sh
(+794 files in other folders)
