[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-post-process"
version = "0.2.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "flask>=3",
    "mujoco>=3",
    "numpy>=1.26,<2",
    "torch==2.4.0",
    "plyfile>=1.1",
    "scipy>=1.12",
    "Pillow>=10",
    "packaging>=24",
    "setuptools>=70",
]

[tool.setuptools.packages.find]
include = ["object_post_process*", "scene_reconstruction*", "utils*"]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

# gsplat predebuilt wheel needs separate install step after base install:
# uv pip install --python .post_process/bin/python gsplat==1.4.0 \
#     --index-url https://docs.gsplat.studio/whl/pt24cu124
