[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mask"
version = "0.1.0"
description = "Interactive box-prompted segmentation wrapping Meta's SAM 3."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
    "torch",
]

[project.scripts]
mask = "mask.cli:main"

[tool.setuptools.packages.find]
include = ["mask*"]
