[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "surface_voxel"
version = "0.1.0"
description = "Clean API + CLI wrapping SAM 3D Objects Stage A (image+mask -> voxel coords)."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "hydra-core",
    "omegaconf",
    "Pillow",
]

[project.scripts]
surface-voxel = "surface_voxel.cli:main"

[tool.setuptools.packages.find]
include = ["surface_voxel*"]
