[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web_surface_voxel"
version = "0.1.0"
description = "FastAPI web app for Stage A: image + mask -> surface voxel."
requires-python = ">=3.10"
dependencies = [
    "arts_recon_web_shared",
    "surface_voxel",
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools.packages.find]
include = ["backend*"]
