[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web_texture"
version = "0.1.0"
description = "FastAPI web app for Stage B - voxel + image + mask -> Gaussian splat + mesh."
requires-python = ">=3.10"
dependencies = [
    "arts_recon_web_shared",
    "texture",
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools]
packages = ["backend"]
